--- a/InventoryManagementDal/InventoryManagementDal.csproj
+++ b/InventoryManagementDal/InventoryManagementDal.csproj
@@ -52,9 +52,11 @@
   <ItemGroup>
     <Compile Include="Abstrack\ICompanyDal.cs" />
     <Compile Include="Abstrack\IProductDal.cs" />
+    <Compile Include="Abstrack\IStaffDal.cs" />
     <Compile Include="Abstrack\IStoreDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfCompanyDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfProductDal.cs" />
+    <Compile Include="Concrete\EntityFramework\EfStaffDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfStoreDal.cs" />
     <Compile Include="Concrete\EntityFramework\InventoryManagementContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
