--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff.cs" />
     <Compile Include="Store.cs" />
   </ItemGroup>
   <ItemGroup>
