--- a/InventoryManagementUI/bin/InventoryManagementUI.dll.config
+++ b/InventoryManagementUI/bin/InventoryManagementUI.dll.config
@@ -53,4 +53,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ICompanyService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:58055/Company.svc" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_ICompanyService" contract="companyService.ICompanyService"
+        name="BasicHttpBinding_ICompanyService" />
+    </client>
+  </system.serviceModel>
 </configuration>
