--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -100,9 +100,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\bracket.css" />
     <Content Include="Content\css\bracket.dark.css" />
-    <Content Include="Content\font\flaticon.css" />
-    <Content Include="Content\font\flaticon.html" />
-    <Content Include="Content\font\Flaticon.svg" />
+    <Content Include="Content\fontIcon\flaticon.css" />
+    <Content Include="Content\fontIcon\flaticon.html" />
+    <Content Include="Content\fontIcon\Flaticon.svg" />
     <Content Include="Content\img\bracketplus-social.png" />
     <Content Include="Content\img\img1.jpg" />
     <Content Include="Content\img\img10.jpg" />
@@ -269,14 +269,15 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Properties\DataSources\InventoryManagementEntity.Company.datasource" />
-    <Content Include="Content\font\Flaticon.eot" />
-    <Content Include="Content\font\Flaticon.ttf" />
-    <Content Include="Content\font\Flaticon.woff" />
-    <Content Include="Content\font\_flaticon.scss" />
     <Content Include="Content\lib\summernote\font\summernote291f.eot" />
     <Content Include="Content\lib\summernote\font\summernote291f.ttf" />
     <Content Include="Content\lib\summernote\font\summernote291f.woff" />
     <Content Include="Content\lib\summernote\font\summernoted41d.eot" />
+    <Content Include="Content\fontIcon\Flaticon.eot" />
+    <Content Include="Content\fontIcon\Flaticon.ttf" />
+    <Content Include="Content\fontIcon\Flaticon.woff" />
+    <Content Include="Content\fontIcon\Flaticon.woff2" />
+    <Content Include="Content\fontIcon\_flaticon.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
