--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +52,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductImg.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="Store.cs" />
