--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -311,6 +311,7 @@
     <Content Include="Views\Shared\_CompanyLayout.cshtml" />
     <Content Include="Views\Menu\Menus.cshtml" />
     <Content Include="Views\Company\CreateStaff.cshtml" />
+    <Content Include="Views\Company\Staff.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
