--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -312,6 +312,7 @@
     <Content Include="Views\Menu\Menus.cshtml" />
     <Content Include="Views\Company\CreateStaff.cshtml" />
     <Content Include="Views\Company\Staff.cshtml" />
+    <Content Include="Views\Company\EditStaff.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
