--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Product.cs" />
-    <Compile Include="ProductImg.cs" />
+    <Compile Include="ProductImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="Store.cs" />
