--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\lib\SpinKit\spinkit.css" />
     <Content Include="Content\lib\summernote\summernote-bs4.css" />
     <Content Include="Content\lib\summernote\summernote-bs4.min.js" />
+    <Content Include="Content\ProductImg\noimage.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -318,6 +319,7 @@
     <Content Include="Views\Company\EditStaff.cshtml" />
     <Content Include="Views\Company\Product.cshtml" />
     <Content Include="Views\Company\AddProduct.cshtml" />
+    <Content Include="Views\Company\DetailProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -327,7 +329,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\ProductImg\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Product\" />
     <Folder Include="Views\Staff\" />
