--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -161,6 +161,7 @@
     <Content Include="Content\img\screen1.png" />
     <Content Include="Content\img\screen2.png" />
     <Content Include="Content\img\screen3.png" />
+    <Content Include="Content\js\BarcodeJs\JsBarcode.js" />
     <Content Include="Content\js\bracket.js" />
     <Content Include="Content\js\chart.chartist.js" />
     <Content Include="Content\js\chart.chartjs.dark.js" />
