--- a/InventoryManagementInterfaces/InventoryManagementInterfaces.csproj
+++ b/InventoryManagementInterfaces/InventoryManagementInterfaces.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAuthenticationService.cs" />
     <Compile Include="ICompanyService.cs" />
     <Compile Include="IMenuService.cs" />
     <Compile Include="IProductImagesServices.cs" />
