--- a/InventoryManagementUI/bin/InventoryManagementUI.dll.config
+++ b/InventoryManagementUI/bin/InventoryManagementUI.dll.config
@@ -18,6 +18,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/CompanyLogin" ></forms>
+    </authentication>
+
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
   </system.web>
