--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Company.cs" />
     <Compile Include="CompanyAddress.cs" />
+    <Compile Include="CompanyLogo.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
