--- a/InventoryManagementBll/InventoryManagementBll.csproj
+++ b/InventoryManagementBll/InventoryManagementBll.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Concrete\AuthenticationManager.cs" />
     <Compile Include="Concrete\CompanyAddressManager.cs" />
     <Compile Include="Concrete\CompanyManager.cs" />
+    <Compile Include="Concrete\CustomerManager.cs" />
     <Compile Include="Concrete\MenuManager.cs" />
     <Compile Include="Concrete\ProductImagesManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
