--- a/InventoryManagementDal/InventoryManagementDal.csproj
+++ b/InventoryManagementDal/InventoryManagementDal.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Abstrack\IAuthenticationDal.cs" />
     <Compile Include="Abstrack\ICompanyAddressesDal.cs" />
     <Compile Include="Abstrack\ICompanyDal.cs" />
+    <Compile Include="Abstrack\ICustomerDal.cs" />
     <Compile Include="Abstrack\IMenuDal.cs" />
     <Compile Include="Abstrack\IProductDal.cs" />
     <Compile Include="Abstrack\IProductImagesDal.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Concrete\EntityFramework\EfAuthenticationDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfCompanyAddressDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfCompanyDal.cs" />
+    <Compile Include="Concrete\EntityFramework\EfCustomerDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfMenuDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfProductDal.cs" />
     <Compile Include="Concrete\EntityFramework\EfProductImagesDal.cs" />
