--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Company.cs" />
     <Compile Include="CompanyAddress.cs" />
     <Compile Include="CompanyLogo.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
