Company Taxnumber control

--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -158,6 +158,7 @@
     <Content Include="Content\img\Background\IMG_20190326_112307.jpg" />
     <Content Include="Content\img\linkedin.png" />
     <Content Include="Content\img\Background\manhattan-new-york-city.jpg" />
+    <Content Include="Content\img\Logoelbow-theme.png" />
     <Content Include="Content\img\resume.png" />
     <Content Include="Content\img\screen1.png" />
     <Content Include="Content\img\screen2.png" />
