--- a/InventoryManagementEntity/InventoryManagementEntity.csproj
+++ b/InventoryManagementEntity/InventoryManagementEntity.csproj
@@ -54,9 +54,11 @@
     <Compile Include="CompanyLogo.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Menu.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="Staff.cs" />
     <Compile Include="Store.cs" />
   </ItemGroup>
