--- a/InventoryManagementBll/InventoryManagementBll.csproj
+++ b/InventoryManagementBll/InventoryManagementBll.csproj
@@ -54,9 +54,11 @@
     <Compile Include="Concrete\CompanyAddressManager.cs" />
     <Compile Include="Concrete\CompanyManager.cs" />
     <Compile Include="Concrete\CustomerManager.cs" />
+    <Compile Include="Concrete\EmailManager.cs" />
     <Compile Include="Concrete\MenuManager.cs" />
     <Compile Include="Concrete\ProductImagesManager.cs" />
     <Compile Include="Concrete\ProductManager.cs" />
+    <Compile Include="Concrete\RoleManager.cs" />
     <Compile Include="Concrete\StaffManager.cs" />
     <Compile Include="Concrete\StoreManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
