--- a/InventoryManagementInterfaces/InventoryManagementInterfaces.csproj
+++ b/InventoryManagementInterfaces/InventoryManagementInterfaces.csproj
@@ -46,9 +46,11 @@
     <Compile Include="ICompanyAddressService.cs" />
     <Compile Include="ICompanyService.cs" />
     <Compile Include="ICustomerService.cs" />
+    <Compile Include="IEmail.cs" />
     <Compile Include="IMenuService.cs" />
     <Compile Include="IProductImagesServices.cs" />
     <Compile Include="IProductService.cs" />
+    <Compile Include="IRoleService.cs" />
     <Compile Include="IStaffService.cs" />
     <Compile Include="IStoreService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
