--- a/InventoryManagementUI/InventoryManagementUI.csproj
+++ b/InventoryManagementUI/InventoryManagementUI.csproj
@@ -361,7 +361,6 @@
     <Content Include="Views\Company\AddCustomer.cshtml" />
     <Content Include="Views\Company\DetailCustomer.cshtml" />
     <Content Include="Views\Account\CreateCompanyAccount.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\StaffLogin.cshtml" />
     <Content Include="Views\Shared\_StaffLayout.cshtml" />
     <Content Include="Views\Staff\Index.cshtml" />
@@ -380,6 +379,7 @@
     <Folder Include="Areas\Master\Views\Home\" />
     <Folder Include="Areas\Master\Views\Shared\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Home\" />
     <Folder Include="Views\Product\" />
   </ItemGroup>
   <ItemGroup>
